# FileIOSamples

./: .gitignore  README.md  build.bat  build.sh  run.bat  run.sh
repotest/: repotest.bat
src/: Book.cpp  BookCommands.txt  Books.txt  CMakeLists.txt  CopyFile.cpp  DeleteFile.cpp  FileEqual.cpp  FileSize.cpp  ListFolder.cpp  MoveToRecycleBin.cpp  PODToBinaryFile.cpp  PipePrint.cpp  ReadBinaryPrintHex.cpp  ReadPrint.cpp  RenameFile.cpp  ZipCompress.cpp
